--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,9 @@ distro==1.9.0
 docopt==0.6.2
 et_xmlfile==2.0.0
 filelock==3.18.0
-Flask==3.0.0
-Flask-Cors==4.0.0
+flask==2.0.3
+vercel-python==5.3.0
+flask-cors==4.0.0
 fsspec==2025.3.0
 google-api-core==2.24.2
 google-auth==2.38.0
@@ -118,7 +119,6 @@ urllib3==2.3.0
 vosk==0.3.45
 Wave==0.0.2
 websockets==15.0.1
-Werkzeug==3.0.4
-whisper==1.1.10
-xlsxwriter==3.2.5
-zhipuai==2.1.4.20230814
+flask
+werkzeug
+zipfile36
